# CXXfaststudy

./: CMakeLists.txt  README.md  main.cc  test.py
lib/a/: a.c  a.h
lib/b/: b.h
